--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -47,7 +47,7 @@ ul.header li {
   text-decoration: underline;
   font-weight: 700;
 }
-input[type=text] {
+input[type=number] {
     padding:8px;
     border:2px solid #ccc;
     -webkit-border-radius: 5px;
@@ -55,7 +55,7 @@ input[type=text] {
     width: 20%;
 }
 
-input[type=text]:focus {
+input[type=number]:focus {
     border-color:#333;
 }
 
